<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeparateBill</string>

    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_clear">CLR</string>
    <string name="icon_back_space">\uf3bf</string>
    <string name="icon_cancel">\uf36e </string>

    <string name="tip_op1">10%</string>
    <string name="tip_op2">15%</string>
    <string name="tip_op3">20%</string>
    <string name="no_tip">No Tip</string>
    <string name="edit_tip">Edit Tip</string>
    <string name="edit_bill">Edit Bill</string>

    <string name="bill">Bill</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="split">Split</string>

    <string name="share_title">Shared by </string>
    <string name="share_title_people">People</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="division">\u00F7</string>

    <string name="zero_value">00.00</string>
    <string name="equals">=</string>

</resources>
