<?xml version="1.0" encoding="utf-8"?>
<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/num_pad"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0,1,2"
    android:elevation="@dimen/number_pad_elevation"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_main_landscape">

    <TableRow style="@style/table_row_div4">

        <TextView
            style="@style/number_text"
            android:text="@string/num_one"
            android:layout_column="0"
            android:tag="1"
            android:onClick="numPadClicked"/>

        <TextView
            style="@style/number_text"
            android:text="@string/num_two"
            android:layout_column="1"
            android:tag="2"
            android:onClick="numPadClicked"/>

        <TextView
            style="@style/number_text"
            android:text="@string/num_three"
            android:layout_column="2"
            android:tag="3"
            android:onClick="numPadClicked"/>

    </TableRow>

    <TableRow style="@style/table_row_div4">

        <TextView
            style="@style/number_text"
            android:text="@string/num_four"
            android:layout_column="0"
            android:tag="4"
            android:onClick="numPadClicked"/>

        <TextView
            style="@style/number_text"
            android:text="@string/num_five"
            android:layout_column="1"
            android:tag="5"
            android:onClick="numPadClicked"/>

        <TextView
            style="@style/number_text"
            android:text="@string/num_six"
            android:layout_column="2"
            android:tag="6"
            android:onClick="numPadClicked"/>

    </TableRow>

    <TableRow style="@style/table_row_div4">

        <TextView
            style="@style/number_text"
            android:text="@string/num_seven"
            android:layout_column="0"
            android:tag="7"
            android:onClick="numPadClicked"/>

        <TextView
            style="@style/number_text"
            android:text="@string/num_eight"
            android:layout_column="1"
            android:tag="8"
            android:onClick="numPadClicked"/>

        <TextView
            style="@style/number_text"
            android:text="@string/num_nine"
            android:layout_column="2"
            android:tag="9"
            android:onClick="numPadClicked"/>

    </TableRow>

    <TableRow style="@style/table_row_div4">

        <TextView
            android:id="@+id/bill_clear"
            style="@style/number_text"
            android:text="@string/num_clear"
            android:textSize="@dimen/number_font_size_land"
            android:layout_column="0"
            android:onClick="numPadClearClicked"/>

        <TextView
            style="@style/number_text"
            android:text="@string/num_zero"
            android:layout_column="1"
            android:tag="0"
            android:onClick="numPadClicked"/>

        <com.example.rzhu.sepratebill.TypefaceTextView
            android:id="@+id/bill_del"
            style="@style/number_text"
            android:text="@string/icon_back_space"
            android:layout_column="2"
            geekui:customTypeface="fonts/ionicons.ttf"
            android:onClick="numPadBackClicked"/>

    </TableRow>

</TableLayout>