<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_tip_col"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tip_opt"
    android:elevation="@dimen/tip_elevation">

    <Button
        android:id="@+id/tip_20"
        style="@style/tip_opt_btn"
        android:text="@string/tip_op3"
        android:onClick="setTipPercent"/>
    <Button
        android:id="@+id/tip_15"
        style="@style/tip_opt_btn"
        android:text="@string/tip_op2"
        android:onClick="setTipPercent"/>
    <Button
        android:id="@+id/tip_10"
        style="@style/tip_opt_btn"
        android:text="@string/tip_op1"
        android:onClick="setTipPercent"/>
    <Button
        android:id="@+id/tip_0"
        style="@style/tip_opt_btn"
        android:textAllCaps="false"
        android:text="@string/no_tip"
        android:onClick="setTipPercent"/>
    <Button
        android:id="@+id/tip_btn"
        style="@style/tip_bill_toggle_btn"
        android:textAllCaps="false"
        android:text="@string/edit_tip"
        android:onClick="setTipPercent"/>

</LinearLayout>