<?xml version="1.0" encoding="utf-8"?>
<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0,1,2,3,4"
    android:background="@color/app_background"
    tools:showIn="@layout/activity_main_landscape">

    <TableRow android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/bill_pad"
            android:text="@string/bill"
            android:layout_column="0"/>

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/tip_pad"
            android:text="@string/tip"
            android:layout_column="1" />

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/white_smoke"
            android:text="@string/total"
            android:layout_column="2" />

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/share_pad"
            android:text="@string/split"
            android:layout_column="3" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text=""
            android:layout_column="4" />

    </TableRow>

    <TableRow android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.example.rzhu.sepratebill.AtmTextView
            android:id="@+id/tv_bill_result"
            style="@style/display_layout_number"
            android:textColor="@color/bill_pad"
            android:layout_column="0" />

        <com.example.rzhu.sepratebill.AtmTextView
            android:id="@+id/tv_tip_result"
            style="@style/display_layout_number"
            android:textColor="@color/tip_pad"
            android:layout_column="1" />

        <TextView
            android:id="@+id/tv_total_result"
            style="@style/display_layout_number"
            android:textColor="@color/white_smoke"
            android:text="@string/zero_value"
            android:layout_column="2" />

        <TextView
            android:id="@+id/tv_share_result"
            style="@style/display_layout_number"
            android:textColor="@color/share_pad"
            android:layout_weight="0.6"
            android:text="@string/num_one"
            android:layout_column="3" />

        <TextView
            android:id="@+id/tv_split_amount"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:textSize="@dimen/final_amount_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/split_amount_result"
            android:layout_column="4" />
    </TableRow>

</TableLayout>