<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_main_portrait">

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/bill_pad"
            android:text="@string/bill" />

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/tip_pad"
            android:text="@string/tip" />

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/white_smoke"
            android:text="@string/total" />

        <TextView
            style="@style/display_layout_label"
            android:textColor="@color/share_pad"
            android:text="@string/split" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.rzhu.sepratebill.AtmTextView
            android:id="@+id/tv_bill_result"
            style="@style/vertical_list_items"
            android:gravity="center_vertical|end"
            android:textSize="@dimen/result_label_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/bill_pad"/>

        <RelativeLayout style="@style/vertical_list_items">

            <TextView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/tip_pad"
                android:layout_alignParentStart="true"
                android:text="@string/plus"
                android:textSize="@dimen/result_label_font_size"
                android:fontFamily="sans-serif-light"/>

            <com.example.rzhu.sepratebill.AtmTextView
                android:id="@+id/tv_tip_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/tip_pad"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/result_label_font_size"
                android:fontFamily="sans-serif-light"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_total_result"
            style="@style/vertical_list_items"
            android:gravity="center_vertical|end"
            android:textSize="@dimen/result_label_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white_smoke"/>

        <RelativeLayout style="@style/vertical_list_items">

            <TextView
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/share_pad"
                android:layout_alignParentStart="true"
                android:text="@string/division"
                android:textSize="@dimen/result_label_font_size"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/tv_share_result"
                android:layout_width="@dimen/share_number_textView_width"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:textColor="@color/share_pad"
                android:layout_alignParentEnd="true"
                android:text="@string/num_one"
                android:textSize="@dimen/result_label_font_size"
                android:fontFamily="sans-serif-light"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_split_amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/final_amount_font_size"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/split_amount_result"
        android:visibility="invisible"/>

</LinearLayout>