<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/BillLabelText"
            android:text="@string/bill" />

        <TextView
            style="@style/TipLabelText"
            android:text="@string/tip" />

        <TextView
            style="@style/TotalLabelText"
            android:text="@string/total" />

        <TextView
            style="@style/SplitLabelText"
            android:text="@string/split" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.rzhu.sepratebill.AtmTextView
            android:id="@+id/tv_bill_result"
            style="@style/BillResultText"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:textColor="@color/tip_pad"
                android:text="@string/plus"
                android:fontFamily="sans-serif-light"/>

            <com.example.rzhu.sepratebill.AtmTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tip_pad"
                android:id="@+id/tv_tip_result"
                android:layout_alignBaseline="@id/plus"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/result_label_font_size"
                android:fontFamily="sans-serif-light"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/tip"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/tv_total_result"
            style="@style/TotalResultText"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:textColor="@color/share_title"
                android:text="@string/division"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/tv_share_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/share_title"
                android:layout_alignBaseline="@id/division"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/result_label_font_size"
                android:fontFamily="sans-serif-light"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_you_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_padding"
            android:layout_marginTop="@dimen/normal_padding"
            android:text="You Pay:"
            android:textSize="@dimen/result_label_font_size"
            android:textColor="@color/split_amount_result"/>

        <TextView
            android:id="@+id/tv_split_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/final_amount_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/split_amount_result"/>


    </RelativeLayout>





</LinearLayout>