<?xml version="1.0" encoding="utf-8"?>
<TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0,1,2"
    android:background="@color/share_background">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25">

        <TextView
            style="@style/ShareNumberText"
            android:text="@string/num_seven"
            android:layout_column="0" />

        <TextView
            style="@style/ShareNumberText"
            android:text="@string/num_eight"
            android:layout_column="1" />

        <TextView
            style="@style/ShareNumberText"
            android:text="@string/num_nine"
            android:layout_column="2" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25">

        <TextView
            style="@style/ShareNumberText"
            android:text="4"
            android:layout_column="0" />

        <TextView
            style="@style/ShareNumberText"
            android:text="5"
            android:layout_column="1" />

        <TextView
            style="@style/ShareNumberText"
            android:text="6"
            android:layout_column="2" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25">

        <TextView
            style="@style/ShareNumberText"
            android:text="1"
            android:layout_column="0" />

        <TextView
            style="@style/ShareNumberText"
            android:text="2"
            android:layout_column="1" />

        <TextView
            style="@style/ShareNumberText"
            android:text="3"
            android:layout_column="2" />

    </TableRow>

</TableLayout>